apps/kube/storage/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: longhorn-route
    namespace: longhorn-system
spec:
    parentRefs:
        - name: kbve-gateway
          namespace: kbve
    hostnames:
        - longhorn.kbve.com
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: longhorn-frontend
                port: 80
