apps/kube/storage/manifests/longhorn-gate-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: longhorn-gate
    namespace: longhorn-system
spec:
    parentRefs:
        - name: kbve-gateway
          namespace: kbve
    hostnames:
        - longhorn.kbve.com
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          timeouts:
              backendRequest: 1800s
          backendRefs:
              - name: longhorn-gate
                port: 5678
